fix：修复自动上传回显

--- a/web/.env.production
+++ b/web/.env.production
@@ -1,10 +1,9 @@
 VITE_BASE=/
 
+
 # 接口地址
 # VITE_GLOB_API_URL=/api
-
-#后端模式
-VITE_GLOB_API_URL=/
+VITE_GLOB_API_URL=useCurrentDomain     #useCurrentDomain 为自动获取当前域名为base地址  
 
 # 是否开启压缩，可以设置为 none, brotli, gzip
 VITE_COMPRESS=none
@@ -25,16 +24,8 @@ VITE_GLOB_CLIENT_KEY= X-Client-ID
 VITE_GLOB_ENABLE_WSS=true
 
 # wss接口地址
-# VITE_GLOB_WSS_URL=/ws
-
-#后端模式写全路径
-VITE_GLOB_WSS_URL=ws://127.0.0.1:3898  
+# VITE_GLOB_WSS_URL=/ws      
+VITE_GLOB_WSS_URL=ws://127.0.0.1:3898  #useCurrentDomain 模式使用绝对url
 
 # WSS KEY
 VITE_GLOB_WSS_APPKEY = 60756ede2a9737a05384aad849e220f8
-
-
-# 线上环境接口地址
-VITE_AXIOS_BASE_URL = fetchCurrentDomain
-
-# VITE_AXIOS_BASE_URL = 'https://api.admin.madong.tech'
